--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,6 @@ dependencies {
     // Kotlin
     implementation "org.jetbrains.anko:anko:$anko_version"
     implementation "org.jetbrains.anko:anko-commons:$anko_version"
-
+    implementation 'com.google.code.gson:gson:2.8.5'
 
 }
